--- a/HTML/Stylist.html
+++ b/HTML/Stylist.html
@@ -49,7 +49,7 @@
     <div class="row">
       <div class="col-12 text-center">
         <div style="display: inline-block; background-color: wheat; padding: 10px; border-radius: 10px;">
-          <img src="/IMAGES/logo.png" alt="Logo" class="img-fluid" style="max-width: 150px; height: auto;">
+          <img src="../IMAGES/logo.jpg" alt="Logo" class="img-fluid" style="max-width: 150px; height: auto;">
         </div>
       </div>
     </div>
