--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="row">
           <div class="col-12 text-center">
             <div style="display: inline-block; background-color: wheat; padding: 10px; border-radius: 10px;">
-              <img src="IMAGES/logo.jpg" alt="Logo" class="img-fluid" style="max-width: 150px; height: auto;">
+              <img src="/IMAGES/logo.jpg" alt="Logo" class="img-fluid" style="max-width: 150px; height: auto;">
             </div>
           </div>
         </div>
@@ -197,7 +197,7 @@
 
 </div>
 <div class="col-md-6 image-content">
-<img src="IMAGES/service33.jpg" class="img-fluid" alt="Fashion Model">
+<img src="/IMAGES/service33.jpg"  alt="Fashion Model">
 </div>
 </div>
 </div>
