--- a/HTML/compare.html
+++ b/HTML/compare.html
@@ -9,7 +9,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
  <link rel="stylesheet" href="/h style.css">
   <link src="../HTML/giftcard.html">
-  <link rel="stylesheet" href="../CSS/compare.css">
   <link src="../HTML/Howitworks.html">
   <link src="../HTML/Membership Plan $ Pricing.html">
   <link src="../HTML/Services.html">
@@ -39,6 +38,37 @@
       font-size: 0.875em;
       margin-top: 5px;
     }
+
+
+      
+.buy-btn {
+    margin-top: 20px;
+}
+.card-img-top {
+height: 100%;
+width: 100%;
+object-fit: cover;
+object-position: center center;
+}
+
+.card {
+height: 100%;
+}
+
+
+.button1{
+    border-radius: 5px !important;
+    border: 2px solid black;
+    color: black;
+    height: 40px;
+    width: 100px;
+    background-color: rgb(216, 176, 101) ;
+  }
+  .button1:hover{
+    background-color: black;
+    color: white;
+  }
+    
   </style>
 </head>
 
