--- a/HTML/compare.html
+++ b/HTML/compare.html
@@ -18,7 +18,7 @@
   <link src="../HTML/lookbook.html">
   <script src="../js/validation.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="icon" type="image/png" href="../IMAGES/logo.png">
+  <link rel="icon" type="image/png" href="../IMAGES/logo.jpg">
   <title>Campared Stylist</title>
   <style>
     /* Remove default password reveal button */
