--- a/HTML/compare.html
+++ b/HTML/compare.html
@@ -70,6 +70,18 @@ height: 100%;
     background-color: black;
     color: white;
   }
+  .custom-btn-1{
+    color: rgb(255, 255, 255);
+    background-color: black;
+    border: none;
+    padding: 0 20px;
+    width: 100px;
+    height: 45px;
+    margin-left: 20px;
+    text-align: center;
+    border-radius: 30px;
+    
+}
     
   </style>
 </head>
