--- a/HTML/Stylist.html
+++ b/HTML/Stylist.html
@@ -230,7 +230,7 @@
         </div>
         <div class="col-md-4">
             <div class="card stylist-card">
-               <a href="Laurie Wardell.html"><img src="../IMAGES/stylist3.webp" class="card-img-top" alt="Gabriella">
+               <a href="Laurie wardell.html"><img src="../IMAGES/stylist3.webp" class="card-img-top" alt="Gabriella">
                 <div class="card-body">
                     <h5 class="stylist-name">Laurie Wardell</h5>
                 </a>
