--- a/HTML/Ashly.html
+++ b/HTML/Ashly.html
@@ -196,7 +196,7 @@
 <div class="container mt-5 mb-5">
     <div class="breadcrumb-container">
         <a href="#">OUR STYLISTS</a> &nbsp;/&nbsp;
-        <span>CHRISTINA COLE</span>
+        <span>ASHLY</span>
     </div>
     <div class="Style-line"></div>
 </div>
@@ -205,7 +205,7 @@
     <div class="row g-0 d-flex align-items-stretch min-vh-100" >
         <div class="col-12 col-md-6 d-flex align-items-center text-container px-4 bg-custom2 order-2 order-md-1 " >
             <div>
-                <h2>Christina Cole <br>  Your Personal Fashion Guide</h2>
+                <h2>Ashly <br>  Your Personal Fashion Guide</h2>
                 <p class="mb-4">My name is Christina. I am a freelance fashion stylist specializing in online shopping and personal <br>  
                     styling. With a background in Fashion Design and Product Development, I refined my expertise with a <br>
                     master’s in Retail & E-Commerce Business. My experience spans fashion buying, trend forecasting, and <br>
@@ -259,7 +259,7 @@
 <div class="container-fluid mb-5 ">
     <div class="row">
         <div class="col-12">
-            <h1 class="ms-4">Christina Cole</h1>
+            <h1 class="ms-4">Ashly</h1>
         </div>
     </div>
 </div>
