--- a/HTML/Gabriella.html
+++ b/HTML/Gabriella.html
@@ -190,7 +190,7 @@
 <div class="container mt-5 mb-5">
     <div class="breadcrumb-container">
         <a href="#">OUR STYLISTS</a> &nbsp;/&nbsp;
-        <span>CHRISTINA COLE</span>
+        <span>Gabriella Rosado</span>
     </div>
     <div class="Style-line"></div>
 </div>
@@ -252,7 +252,7 @@
 <div class="container-fluid mb-5 ">
     <div class="row">
         <div class="col-12">
-            <h1 class="ms-4">Christina Cole</h1>
+            <h1 class="ms-4">Gabriella Rosado</h1>
         </div>
     </div>
 </div>
