--- a/HTML/Jessica.html
+++ b/HTML/Jessica.html
@@ -199,7 +199,7 @@
     <div class="row g-0 d-flex align-items-stretch min-vh-100" >
         <div class="col-12 col-md-6 d-flex align-items-center text-container px-4 bg-custom2 order-2 order-md-1 " >
             <div>
-                <h2>Christina Cole <br>  Your Personal Fashion Guide</h2>
+                <h2>Jessica <br>  Your Personal Fashion Guide</h2>
                 <p class="mb-4">My name is Christina. I am a freelance fashion stylist specializing in online shopping and personal <br>  
                     styling. With a background in Fashion Design and Product Development, I refined my expertise with a <br>
                     master’s in Retail & E-Commerce Business. My experience spans fashion buying, trend forecasting, and <br>
