--- a/HTML/Nicole.html
+++ b/HTML/Nicole.html
@@ -199,7 +199,7 @@
     <div class="row g-0 d-flex align-items-stretch min-vh-100" >
         <div class="col-12 col-md-6 d-flex align-items-center text-container px-4 bg-custom2 order-2 order-md-1 " >
             <div>
-                <h2>Nicole NG : <br>  Your Personal Fashion Guide</h2>
+                <h2>Nicole NG  <br>  Your Personal Fashion Guide</h2>
                 <p class="mb-4">With a deep passion for fashion and an eye for detail, Nicole has spent years curating stylish wardrobes <br>  
                     for online shoppers worldwide. From everyday essentials to statement pieces, she understands that <br>
                     fashion should be effortless yet impactful. Whether you're refreshing your closet, upgrading your <br>
