--- a/HTML/Join today.html
+++ b/HTML/Join today.html
@@ -265,7 +265,7 @@
 
   <div class="w-100 p-3 text-white" style="background-color: black;">
     © 2024 Copyright:
-    <a class="fw-bold text-white" href="/index.html" target="_blank">OnlineFashionShopping.com</a>
+    <a class="fw-bold text-white" href="../index.html" target="_blank">OnlineFashionShopping.com</a>
   </div>
 </footer>
 
