--- a/HTML/giftcard.html
+++ b/HTML/giftcard.html
@@ -561,7 +561,7 @@
               <button class="button3 px-4 py-2 ">SEE OUR PLANS</button>
               </a>
               
-              <a href="Join Today.html" target="_blank">
+              <a href="Join today.html" target="_blank">
               <button class="button3 px-4 py-2"> JOIN TODAY </button>
           </a>
           </div>
