--- a/HTML/lookbook3.html
+++ b/HTML/lookbook3.html
@@ -284,7 +284,7 @@
                     <button class="button px-4 py-2 ">SEE OUR PLANS</button>
                     </a>
                     
-                    <a href="Join Today.html" target="_blank">
+                    <a href="Join today.html" target="_blank">
                     <button class="button px-4 py-2"> JOIN TODAY </button>
                 </a>
                 </div>
@@ -333,7 +333,7 @@
   
     <div class="w-100 p-3 text-white" style="background-color: black;">
       © 2024 Copyright:
-      <a class="fw-bold text-white" href="/index.html" target="_blank">OnlineFashionShopping.com</a>
+      <a class="fw-bold text-white" href="../index.html" target="_blank">OnlineFashionShopping.com</a>
     </div>
   </footer>
   
