--- a/HTML/Amira.html
+++ b/HTML/Amira.html
@@ -59,7 +59,7 @@
       <div class="row">
         <div class="col-12 col-sm-12 col-md-12">
     
-          <nav class="navbar navbar-expand-md navbar-light">
+          <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -198,35 +198,42 @@
     </div>
     <div class="Style-line"></div>
 </div>
-
 <div class="container p-0">
-    <div class="row g-0 d-flex align-items-stretch min-vh-100" >
-        <div class="col-12 col-md-6 d-flex align-items-center text-container px-4 bg-custom2 order-2 order-md-1 " >
-            <div>
-                <h2>Amira <br>  Your Personal Fashion Guide</h2>
-                <p class="mb-4">My name is Christina. I am a freelance fashion stylist specializing in online shopping and personal <br>  
-                    styling. With a background in Fashion Design and Product Development, I refined my expertise with a <br>
-                    master’s in Retail & E-Commerce Business. My experience spans fashion buying, trend forecasting, and <br>
-                    digital styling, helping clients curate wardrobes effortlessly.</p>
-            
-                <p>After years in corporate, I pursued my passion for making style accessible. <br>
-                    I love guiding shoppers in finding pieces that elevate their confidence <br>
-                    and reflect their unique personalities. When you look good, you feel empowered—I’m here<br>
-                    to help you shop smarter and style better with ease!</p>
-                   <div class="text-center mt-3">
-                        <a href="" target="_blank">
-                         <button class="button mb-4">START YOUR QUIZZ</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-          <div class="col-md-6 p-0 image-container order-1 order-md-2">
-            <div class="w-100" style="min-height: 100%; ">
-            <img src="../IMAGES/stylist5.jpg" alt="services" class="img-fluid w-100 h-100" style="object-fit: cover; object-position: top;"> <!--image crop only in desktop  not in mobile view-->
-            </div>
+  <div class="row g-0 d-flex align-items-stretch min-vh-100">
+
+    <!-- Text Section -->
+    <div class="col-12 col-md-6 d-flex align-items-center text-container px-4 bg-custom2 order-2 order-md-1">
+      <div>
+        <h2>Amira <br> Your Personal Fashion Guide</h2>
+        <p class="mb-4">
+          My name is Christina. I am a freelance fashion stylist specializing in online shopping and personal <br>
+          styling. With a background in Fashion Design and Product Development, I refined my expertise with a <br>
+          master’s in Retail & E-Commerce Business. My experience spans fashion buying, trend forecasting, and <br>
+          digital styling, helping clients curate wardrobes effortlessly.
+        </p>
+        <p>
+          After years in corporate, I pursued my passion for making style accessible. <br>
+          I love guiding shoppers in finding pieces that elevate their confidence <br>
+          and reflect their unique personalities. When you look good, you feel empowered—I’m here<br>
+          to help you shop smarter and style better with ease!
+        </p>
+        <div class="text-center mt-3">
+          <a href="#" target="_blank">
+            <button class="button mb-4">START YOUR QUIZZ</button>
+          </a>
         </div>
+      </div>
     </div>
-</div> 
+
+    <!-- Image Section -->
+    <div class="col-12 col-md-6 p-0 order-1 order-md-2">
+      <div class="h-100 w-100 d-flex">
+        <img src="../IMAGES/stylist5.jpg" alt="services" class="img-fluid w-100" style="object-fit: cover; object-position: top; height: 100%;">
+      </div>
+    </div>
+
+  </div>
+</div>
 
 
 <div class="container-fluid text-center my-5">
