--- a/HTML/giftcard.html
+++ b/HTML/giftcard.html
@@ -116,7 +116,7 @@
       <div class="row">
         <div class="col-12 col-sm-12 col-md-12">
     
-          <nav class="navbar navbar-expand-md navbar-light">
+          <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -310,7 +310,7 @@
           <img src="../IMAGES/card8.webp" class="card-img-top" alt="Rs. 1000 Gift Card">
           <div class="card-body">
             <h5 class="card-title">Rs. 1000 Gift Card</h5>
-            <p class="card-text">A gift for something special.</p>
+            <p class="card-text">A gift for  special.</p>
             <button class="button" onclick="openModal(1000)">Buy Now</button>
           </div>
         </div>
@@ -355,7 +355,7 @@
           <img src="../IMAGES/card12.webp" class="card-img-top" alt="Rs. 1000 Gift Card">
           <div class="card-body">
             <h5 class="card-title">Rs. 1000 Gift Card</h5>
-            <p class="card-text">A gift for something special.</p>
+            <p class="card-text">A gift for  special.</p>
             <button class="button" onclick="openModal(1000)">Buy Now</button>
           </div>
         </div>
@@ -401,7 +401,7 @@
           <img src="../IMAGES/card15.webp" class="card-img-top" alt="Rs. 1000 Gift Card">
           <div class="card-body">
             <h5 class="card-title">Rs. 1000 Gift Card</h5>
-            <p class="card-text">A gift for something special.</p>
+            <p class="card-text">A gift for  special.</p>
             <button class="button" onclick="openModal(1000)">Buy Now</button>
           </div>
         </div>
