--- a/HTML/Howitworks.html
+++ b/HTML/Howitworks.html
@@ -57,7 +57,7 @@
       <div class="row">
         <div class="col-12 col-sm-12 col-md-12">
     
-          <nav class="navbar navbar-expand-md navbar-light">
+          <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -237,7 +237,9 @@
             </div>
         </div>
               <div class="col-md-6 p-0 image-container order-1 order-md-2">
+                <div class="h-100 w-100 d-flex">
                 <img src="../IMAGES/how it work.jpg" alt="services" class="img-fluid w-100">
+                </div>
         </div>
     </div>
   
