--- a/HTML/Join today.html
+++ b/HTML/Join today.html
@@ -58,7 +58,7 @@
       <div class="row">
         <div class="col-12 col-sm-12 col-md-12">
     
-          <nav class="navbar navbar-expand-md navbar-light">
+          <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -222,7 +222,9 @@
 
         <!-- Image Section (Right Side) -->
         <div class="col-12 col-md-7 image-container order-1 order-md-2 p-0 m-0">
+          <div class="h-100 w-100 d-flex">
             <img src="../IMAGES/joinnow.jpg" alt="services" class="img-fluid w-100">
+          </div>
         </div>
     </div>
 </div>
