--- a/HTML/Sandy.html
+++ b/HTML/Sandy.html
@@ -56,7 +56,7 @@
       <div class="row">
         <div class="col-12 col-sm-12 col-md-12">
     
-          <nav class="navbar navbar-expand-md navbar-light">
+          <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -223,7 +223,7 @@
 
       <!-- Image Column -->
       <div class="col-12 col-md-6 col-sm-6 p-0 image-container order-1 order-md-2">
-          <div class="w-100 h-100">
+        <div class="h-100 w-100 d-flex">
               <img src="../IMAGES/stlist7.jpeg" alt="services" class="img-fluid w-100 h-100" style="object-fit: cover; object-position: top;">
           </div>
       </div>
