--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -58,7 +58,7 @@
       <div class="row">
         <div class="col-12 col-sm-12 col-md-12">
     
-          <nav class="navbar navbar-expand-md navbar-light">
+          <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -201,7 +201,7 @@
 
 <!-- Contact Form Section -->
 <div class="container">
-  <div class="row g-0 align-items-center">
+  <div class="row d-flex align-items-stretch min-vh-100 g-0">
     <!-- Left: Image -->
     <div class="col-md-6">
       <img src="../IMAGES/cont.jpg" alt="Contact Us Banner" class="img-fluid w-100 h-100 object-fit-cover" />
