--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="row">
           <div class="col-12 col-sm-12 col-md-12">
       
-            <nav class="navbar navbar-expand-md navbar-light">
+            <nav class="navbar navbar-expand-lg navbar-light">
               <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                   aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -398,7 +398,9 @@ outfits that are perfect for you.</p>
 <div class="container-fluid  p-0">
   <div class="row g-0 content-center">
       <div class="col-md-5 p-0 image-container">
+        <div class="h-100 w-100 d-flex">
           <img src="IMAGES/stylist5.jpg" alt="services" class="img-fluid w-100">
+        </div>
       </div>
       <div class="col-12 col-md-7 d-flex align-items-center justify-content-center text-center px-4 bg-custom1 order-2 order-md-1">
         <div>
